[package]
name = "cheat_ccv3_pp_py"
version = "0.1.0"
edition = "2021"
authors = ["NatiGhost1 <noreply@example.com>"]
license = "MIT"
readme = "README.md"
description = "Python wrapper for the cheat-ccv3-pp osu! PP and star calculator."
repository = "https://github.com/NatiGhost1/cheat-ccv3-pp"

[lib]
name = "cheat_ccv3_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "macros"] }
cheat-ccv3-pp = { git = "https://github.com/NatiGhost1/cheat-ccv3-pp.git", tag = "0.30.0" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
